--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.4",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "css-loader": "^0.28.11",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "style-loader": "^0.23.1",
     "webpack": "^3.12.0"
   },
   "dependencies": {
