--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
   "devDependencies": {
     "@babel/core": "^7.2.0",
     "@babel/preset-env": "^7.2.0",
+    "autoprefixer": "^9.4.2",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.4",
     "babel-plugin-transform-runtime": "^6.23.0",
     "css-loader": "^0.28.11",
+    "cssnano": "^4.1.7",
     "extract-text-webpack-plugin": "^3.0.2",
+    "postcss": "^7.0.6",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-loader": "^3.0.0",
     "style-loader": "^0.23.1",
     "webpack": "^3.12.0"
   },
